--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Équipes</h5>
-                    <p class="card-text">Gérez les équipes et les joueurs.</p>
-                    <a href="{{ url_for('teams') }}" class="btn btn-primary">Aller aux équipes</a>
+                    <h5 class="card-title">Administration</h5>
+                    <p class="card-text">Gérez le tournois.</p>
+                    <a href="{{ url_for('admin') }}" class="btn btn-primary">Administration</a>
                 </div>
             </div>
         </div>
