--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('admin') }}">Admin</a>
                     </li>
+                    <li>
+                        {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('logout') }}" class="nav-link">Déconnexion</a>
+                        {% else %}
+                        <a href="{{ url_for('login') }}" class="nav-link">Connexion</a>
+                        {% endif %}
+                    </li>
                 </ul>
             </div>
         </div>
