Add current round counter

--- a/templates/matches.html
+++ b/templates/matches.html
@@ -44,7 +44,7 @@
             {% endif %}
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Matchs non joués</h5>
+                    <h5>Matchs en cours - Tour {{ current_round }}</h5>
                     <table class="table">
                         <thead>
                             <tr>
