--- a/templates/admin.html
+++ b/templates/admin.html
@@ -73,7 +73,7 @@
                         <tbody>
                             {% for team in teams %}
                                 <tr>
-                                    <td><a href="{{ url_for('team_detail', team_name=team.name) }}">{{ team.name }}</a></td>
+                                    <td>{{ team.name }}</td>
                                     <td>
                                         {% if team.players %}
                                             {{ team.players|map(attribute='name')|join(', ') }}
@@ -81,7 +81,7 @@
                                             Aucun
                                         {% endif %}
                                     </td>
-                                    <td><a href="{{ url_for('team_detail', team_name=team.name) }}" class="btn btn-sm btn-info">Voir</a></td>
+                                    <td><a href="{{ url_for('team_detail', team_id=team.id) }}" class="btn btn-sm btn-info">Voir</a></td>
                                 </tr>
                             {% endfor %}
                         </tbody>
