Add info pannel

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,3 +32,18 @@
         </div>
     </div>
 {% endblock %}
+
+{% block info_panel %}
+    <h5>Accueil</h5>
+    <p>Bienvenue sur le gestionnaire de tournoi de Belote! Cet outil vous permet de gérer facilement votre tournoi.</p>
+    
+    <h5>Fonctionnalités principales:</h5>
+    <ul>
+        <li><strong>Administration:</strong> Créez et gérez les équipes, réinitialisez le tournoi</li>
+        <li><strong>Matchs:</strong> Générez les tours de matchs et enregistrez les scores</li>
+        <li><strong>Classement:</strong> Consultez le classement des équipes en temps réel</li>
+    </ul>
+    
+    <h5>Comment démarrer?</h5>
+    <p>Commencez par l'administration pour ajouter vos équipes, puis générez le prochain tour pour lancer les matchs!</p>
+{% endblock %}
