--- a/templates/login.html
+++ b/templates/login.html
@@ -14,3 +14,14 @@
         <button type="submit" class="btn btn-primary">Se connecter</button>
     </form>
 {% endblock %}
+
+{% block info_panel %}
+    <h5>Connexion Requise</h5>
+    <p>Vous devez vous connecter pour accéder au gestionnaire de tournoi.</p>
+    
+    <h5>Identifiants:</h5>
+    <p>Utilisez vos identifiants administrateur pour vous connecter. Si vous n'avez pas encore de compte, veuillez contacter l'administrateur.</p>
+    
+    <h5>Sécurité:</h5>
+    <p>Votre mot de passe est sécurisé et ne sera jamais partagé. Ne partagez vos identifiants avec personne.</p>
+{% endblock %}
