--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -42,3 +42,21 @@
         </div>
     </div>
 {% endblock %}
+
+{% block info_panel %}
+    <h5>Classement du Tournoi</h5>
+    <p>Consultez le classement en direct de votre tournoi de Belote.</p>
+    
+    <h5>Comment lire le tableau:</h5>
+    <ul>
+        <li><strong>Total de points:</strong> Points marqués au cours du tournoi</li>
+        <li><strong>Différence de Points:</strong> Écart entre les points pour et contre</li>
+        <li><strong>Tours:</strong> Résultats détaillés par manche</li>
+    </ul>
+    
+    <h5>Interprétation:</h5>
+    <p>Les équipes sont classées par points marqués et différence de points. Plus d'informations disponibles en cliquant sur "Voir" pour chaque équipe.</p>
+    
+    <h5>Mise à jour:</h5>
+    <p>Le classement est mis à jour automatiquement après chaque score enregistré.</p>
+{% endblock %}
