--- a/templates/teams.html
+++ b/templates/teams.html
@@ -53,3 +53,21 @@
         </div>
     </div>
 {% endblock %}
+
+{% block info_panel %}
+    <h5>Gestion des Équipes</h5>
+    <p>Gérez toutes les équipes et leurs joueurs participants.</p>
+    
+    <h5>Ajouter une Équipe:</h5>
+    <ul>
+        <li>Entrez le nom de l'équipe</li>
+        <li>Ajoutez les deux joueurs (nom complet recommandé)</li>
+        <li>Cliquez sur "Ajouter"</li>
+    </ul>
+    
+    <h5>Modifier une Équipe:</h5>
+    <p>Cliquez sur le nom d'une équipe dans la liste pour accéder aux détails et modifier les joueurs.</p>
+    
+    <h5>Règles:</h5>
+    <p>Chaque équipe doit avoir exactement 2 joueurs pour participer au tournoi.</p>
+{% endblock %}
