--- a/templates/base.html
+++ b/templates/base.html
@@ -176,9 +176,27 @@
                 <button class="btn btn-close btn-close-white" aria-label="Fermer" onclick="toggleInfoPanel()"></button>
             </div>
             <div class="info-panel-body" id="infoPanelContent">
-                {% block info_panel %}
+                {% set current_page = request.endpoint %}
+                {% if info_panels and current_page in info_panels %}
+                    {% set panel = info_panels[current_page] %}
+                    <h5>{{ panel.title }}</h5>
+                    <p>{{ panel.description }}</p>
+                    
+                    {% for section in panel.sections %}
+                        <h5>{{ section.heading }}</h5>
+                        {% if section['list_items'] %}
+                            <ul>
+                                {% for item in section['list_items'] %}
+                                    <li>{{ item }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% elif section['content'] %}
+                            <p>{{ section['content'] }}</p>
+                        {% endif %}
+                    {% endfor %}
+                {% else %}
                     <p>Bienvenue sur le gestionnaire de tournoi de Belote!</p>
-                {% endblock %}
+                {% endif %}
             </div>
         </div>
     </div>
