--- a/templates/base.html
+++ b/templates/base.html
@@ -151,7 +151,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('admin') }}">Admin</a>
                     </li>
-                    <li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
                         {% if current_user.is_authenticated %}
                         <a href="{{ url_for('logout') }}" class="nav-link">Déconnexion</a>
                         {% else %}
